# bamboost-tui

./: .gitignore  README.md  pyproject.toml
archive/: welcome.py
bamboost_tui/: __init__.py  _cmp.py  _commandline.py  _datatable.py  app.py  bamboost.tcss  collection_picker.py  collection_table.py  hdfview.py  hfive.py  utils.py
bamboost_tui/archive/: welcome.py
bamboost_tui/commandline/: __init__.py  _cmp.py  base.py  commandline.py  parser.py
bamboost_tui/widgets/: __init__.py  _cmp.py  _datatable.py  confirmation.py
